# concierge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  windows-build.yml
crates/concierge/: Cargo.toml
crates/concierge-ai/: Cargo.toml
crates/concierge-ai/src/: agent.rs  client.rs  lib.rs  tools.rs
crates/concierge-ai/tests/: harness.rs
crates/concierge-ba2/: Cargo.toml
crates/concierge-ba2/src/: dds.rs  lib.rs  reader.rs
crates/concierge-ba2/tests/: real_ba2.rs  roundtrip.rs
crates/concierge-core/: Cargo.toml
crates/concierge-core/src/: build.rs  check.rs  diag.rs  download.rs  download_manager.rs  error.rs  game.rs  generations.rs  install.rs  launch.rs  layout.rs  lib.rs  lint.rs  lockfile.rs  manifest.rs  manifest_edit.rs  nexus.rs  nix.rs  pipeline.rs  plan.rs  profiles.rs  provision.rs  realize.rs  repo.rs  runtime.rs  sandbox.rs  saves.rs  settings.rs  shell.rs  state.rs  steam.rs  store.rs
crates/concierge-core/tests/: dendritic_laws.rs  nix_differential.rs  patch_build.rs  pure_core.rs  reproducible.rs
crates/concierge-daemon/: Cargo.toml
crates/concierge-daemon/src/: lib.rs  main.rs  tray.rs
crates/concierge-db/: Cargo.toml
crates/concierge-db/src/: audit.rs  catalog.rs  ch.rs  error.rs  gql.rs  lib.rs  modrinth.rs  schema.rs  sync.rs
crates/concierge-db/tests/: pure.rs
crates/concierge-esp/: Cargo.toml
crates/concierge-esp/src/: clean.rs  conflicts.rs  formlist.rs  lib.rs  lvli.rs  reader.rs  writer.rs
crates/concierge-esp/tests/: merge_props.rs  real_install.rs
crates/concierge-fallout3/: Cargo.toml
crates/concierge-fallout3/src/: lib.rs
crates/concierge-fallout4/: Cargo.toml
crates/concierge-fallout4/src/: lib.rs
crates/concierge-filedrop/: Cargo.toml
crates/concierge-filedrop/src/: lib.rs
crates/concierge-fomod/: Cargo.toml
crates/concierge-fomod/examples/: dump.rs
crates/concierge-fomod/src/: lib.rs
crates/concierge-games/: Cargo.toml  games.toml
crates/concierge-games/src/: lib.rs
crates/concierge-gui/: Cargo.toml
crates/concierge-gui/assets/: DejaVuSans-LICENSE
crates/concierge-gui/src/: diag.rs  downloads.rs  main.rs  terminal.rs  tray.rs  updates.rs
crates/concierge-gui/tests/: no_drift_guard.rs
crates/concierge-hash/: Cargo.toml
crates/concierge-hash/examples/: hashfile.rs
crates/concierge-hash/src/: lib.rs
crates/concierge-jarmods/: Cargo.toml
crates/concierge-jarmods/src/: lib.rs
crates/concierge-lint/: Cargo.toml
crates/concierge-lint/src/: bg3.rs  kotor.rs  lib.rs  minecraft.rs  rimworld.rs  stardew.rs  valheim.rs
crates/concierge-modfolders/: Cargo.toml
crates/concierge-modfolders/src/: lib.rs
crates/concierge-modlist/: Cargo.toml
crates/concierge-modlist/src/: lib.rs
crates/concierge-modpack-import/: Cargo.toml
crates/concierge-modpack-import/src/: lib.rs
crates/concierge-modpack-import/tests/: import.rs
crates/concierge-modpack-import/tests/fixtures/: sample.modlist.json
crates/concierge-newvegas/: Cargo.toml
crates/concierge-newvegas/src/: lib.rs
crates/concierge-oblivion/: Cargo.toml
crates/concierge-oblivion/src/: lib.rs
crates/concierge-override/: Cargo.toml
crates/concierge-override/src/: adapter.rs  changes.rs  install.rs  lib.rs  tlk.rs  twoda.rs
crates/concierge-override/tests/: diff_apply.rs  engine.rs  props.rs
crates/concierge-pakregistry/: Cargo.toml
crates/concierge-pakregistry/src/: lib.rs
crates/concierge-patch/: Cargo.toml
crates/concierge-patch/src/: lib.rs
crates/concierge-platform/: Cargo.toml
crates/concierge-platform/src/: lib.rs
crates/concierge-pluginorder/: Cargo.toml
crates/concierge-pluginorder/proptest-regressions/: loot.txt
crates/concierge-pluginorder/src/: adapter.rs  assets.rs  bethesda_lints.rs  lib.rs  loadorder.rs  loot.rs  masterlist.rs  reconcile.rs  sortrules.rs
crates/concierge-pluginorder/tests/: masterlist.rs  sortrules.rs
crates/concierge-runtimeinject/: Cargo.toml
crates/concierge-runtimeinject/src/: lib.rs
crates/concierge-skyrim/: Cargo.toml
crates/concierge-skyrim/src/: lib.rs
crates/concierge-skyrimse/: Cargo.toml
crates/concierge-skyrimse/src/: lib.rs
crates/concierge-starfield/: Cargo.toml
crates/concierge-starfield/src/: lib.rs
crates/concierge-toolmerge/: Cargo.toml
crates/concierge-toolmerge/src/: lib.rs
crates/concierge-ui/: Cargo.toml
crates/concierge-ui/src/: lib.rs
crates/concierge-ui/tests/: golden.rs
crates/concierge-ui/tests/golden/: ai_running.txt  browse.txt  confirming_uninstall.txt  editing.txt  locked.txt  no_workspace.txt  preview.txt  settings.txt
crates/concierge-update/: Cargo.toml
crates/concierge-update/src/: apply.rs  github.rs  lib.rs
crates/concierge-wabbajack/: Cargo.toml
crates/concierge-wabbajack/src/: lib.rs
crates/concierge-wabbajack/tests/: import.rs
crates/concierge-wabbajack/tests/fixtures/: sample.modlist.json
crates/concierge/src/: headless.rs  init.rs  main.rs
crates/concierge/tests/: adopt.rs  audit_cli.rs  curated_plugins.rs  doctor.rs  fomod_install.rs  inert_esp_masters.rs  install_detect.rs  journey_flow.rs  launch_check.rs  live_games.rs  live_mutate.rs  live_shell.rs  preview.rs  provision_guide.rs
crates/concierge/tests/common/: mod.rs
crates/glow-probe/: Cargo.toml
crates/glow-probe/src/: main.rs
docs/: coverage.md  declaration-schema.md  schema-layers-analysis.md  ux-naming.md
examples/fallout4-profile/: manifest.toml
examples/fallout4-profile/state/: plan.json
nix/: check.sh  dendritic.nix  lib.nix
scripts/: install-linux.sh  install-mac.sh  install-windows.ps1  verify-linux-docker.sh  verify-windows-docker.sh
