[package]
name = "concierge-fallout4"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concierge Fallout 4 — a Bethesda-family leaf crate (data-only specialization of concierge-pluginorder)."

[dependencies]
concierge-core = { path = "../concierge-core" }
concierge-pluginorder = { path = "../concierge-pluginorder" }

[lints]
workspace = true
