[package]
name = "concierge-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concierge desktop UI (prototype)"

[dependencies]
concierge-platform = { path = "../concierge-platform" }
concierge-ui = { path = "../concierge-ui" }
concierge-core = { path = "../concierge-core" }
concierge-games = { path = "../concierge-games" }
concierge-pluginorder = { path = "../concierge-pluginorder" }
concierge-lint = { path = "../concierge-lint" }
concierge-ai = { path = "../concierge-ai" }
eframe = { version = "0.31", features = ["wgpu"] }
portable-pty = "0.9"
vt100 = "0.15"
serde_json = "1.0.150"
env_logger = "0.11"
concierge-db = { version = "0.7.0", path = "../concierge-db" }

[dev-dependencies]
# Drives the real App::update through egui's AccessKit tree (semantic queries)
# + wgpu snapshot diffs — the render-regression tests (visual-testing dossier).
egui_kittest = { version = "0.31", features = ["wgpu", "snapshot"] }

[lints]
workspace = true
