[package]
name = "concierge-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concierge desktop UI (prototype)"

# The USER-FACING binary: double-clicking `concierge` opens the GUI and brings
# up the daemon (Vortex-style). CLI-style invocations forward to the sibling
# `concierge-cli` (see main.rs), so `concierge eval` in old agent profiles
# still behaves as the CLI.
[[bin]]
name = "concierge"
path = "src/main.rs"

[dependencies]
concierge-platform = { path = "../concierge-platform" }
concierge-ui = { path = "../concierge-ui" }
concierge-core = { path = "../concierge-core" }
concierge-games = { path = "../concierge-games" }
concierge-pluginorder = { path = "../concierge-pluginorder" }
concierge-lint = { path = "../concierge-lint" }
concierge-ai = { path = "../concierge-ai" }
concierge-update = { path = "../concierge-update" }
concierge-daemon = { path = "../concierge-daemon" }
eframe = { version = "0.31", features = ["wgpu"] }
vt100 = "0.15"
serde_json = "1.0.150"
env_logger = "0.11"
concierge-db = { version = "0.12.0", path = "../concierge-db" }

# The in-app tray (Vortex model: the app owns window, tray, and queue) — same
# crate/version and OS gate as the daemon's legacy tray; eframe's winit loop is
# the OS message pump it needs.
[target.'cfg(any(target_os = "macos", windows))'.dependencies]
tray-icon = "0.19"

# The embedded terminal's PTY backend. portable-pty's ConPTY delivers no child
# output on Windows (verified in CI), so use the dedicated `conpty` crate there.
[target.'cfg(not(windows))'.dependencies]
portable-pty = "0.9"

[target.'cfg(windows)'.dependencies]
conpty = "0.7"

[dev-dependencies]
# Drives the real App::update through egui's AccessKit tree (semantic queries)
# + wgpu snapshot diffs — the render-regression tests (visual-testing dossier).
egui_kittest = { version = "0.31", features = ["wgpu", "snapshot"] }

[lints]
workspace = true
