[package]
name = "concierge-modpack-import"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concierge — read-only, user-local read-only, user-local importer for an existing modlist archive (.wabbajack) into a Concierge view (interop)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "1"

[dev-dependencies]
toml = "0.8"

[lints]
workspace = true
