[package]
name = "concierge-newvegas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concierge Fallout New Vegas — a Bethesda-family leaf crate (data-only specialization of concierge-pluginorder)."

[dependencies]
concierge-core = { path = "../concierge-core" }
concierge-pluginorder = { path = "../concierge-pluginorder" }

[lints]
workspace = true
